[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/devilsummonerexpand.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/UI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 2
font_data = ExtResource( 1 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopRightContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TopRightContainer"]
margin_bottom = 600.0

[node name="turn_text" type="Label" parent="TopRightContainer/VBoxContainer"]
visible = false
margin_right = 98.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "test"

[node name="TopWideContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TopWideContainer"]
margin_right = 1024.0
margin_bottom = 45.0

[node name="phase_text" type="Label" parent="TopWideContainer/VBoxContainer"]
visible = false
margin_right = 1024.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "test"
align = 1

[node name="CenterWideContainer" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterWideContainer"]
margin_right = 1024.0
margin_bottom = 45.0

[node name="victory_text" type="Label" parent="CenterWideContainer/VBoxContainer"]
visible = false
margin_right = 1024.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Victory!"
align = 1
